--- a/css/product.css
+++ b/css/product.css
@@ -1,148 +1,396 @@
-body{
-    background-color: whitesmoke;
-}
-
 /* Custom styles */
-/* #productList .col-md-4 {
-    margin-bottom: 30px;
-} */
-#bestSellersCarouselContainer .product-card{
-   /* display: inline-block; */
-   flex-wrap: wrap;
-   padding: 0;
-   padding-left: 15px;
-   padding-right: 15px;
-   padding-top: 10px;
-   padding-bottom: 10px;
-}
-#bestSellersCarouselContainer .product-card img{
-    /* border: 1px solid; */
-    max-height: 150px;
-    width: 100px;
-    float: left;
-
+* {
+  margin: 0;
+  padding: 0;
 }
 
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333;
+}
 
+#top-header {
+  background-color: #f2f4f7;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+#top-contact a {
+  text-decoration: none;
+  color: #333;
+}
+
+#top-contact a:hover {
+  color: red;
+}
+
+#top-header .fab {
+  font-size: 20px;
+}
+
+.fa-facebook {
+  color: blue;
+}
+
+.fa-instagram {
+  color: red;
+}
+
+.fa-tiktok {
+  color: black;
+}
+
+.fa-youtube {
+  color: red;
+}
+
+.fa-cart-shopping {
+  color: orangered;
+}
+
+.nav-item {
+  margin-right: 10px;
+}
+
+#navbar-menu {
+  background-color: #d70018;
+}
+
+#select-product-category {
+  max-width: 160px;
+}
+
+/* Trang trí cho dropdown menu */
+.dropdown-menu {
+  background-color: #d45a69;
+}
+
+.dropdown-menu h6 {
+  color: rgb(49, 48, 48);
+}
+
+.dropdown-menu a {
+  color: #ffffff !important;
+  /* Màu chữ trong dropdown menu */
+}
+
+.dropdown-menu a:hover {
+  background-color: rgba(255, 192, 203, 0.755);
+}
+
+.main {
+  margin-top: -16px;
+  background-color: #f2f4f7;
+}
+
+.breadcrumb {
+  background-color: #f2f4f7;
+}
+
+.breadcrumb a {
+  text-decoration: none;
+  color: black;
+}
+
+.breadcrumb a:hover {
+  color: red;
+}
+
+.list-group {
+  width: 100%;
+}
+
+.list-group-item {
+  background-color: #f5f5f5;
+  border: none;
+  color: #333;
+}
+
+#aside h4 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: white;
+  background-color: #f9415b;
+  text-align: center;
+  padding: 15px;
+  border-bottom: 2px dashed white;
+  margin: 0;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.list-group {
+  width: 100%;
+}
+
+.list-group-item.active {
+  background-color: #f9415b;
+  color: white;
+  /* Optional: Change the text color if needed */
+}
+
+.list-group-item:hover {
+  background-color: rgba(255, 192, 203, 0.755);
+}
+
+#category-list-nav {
+  border-radius: 25px;
+  overflow: hidden;
+  box-shadow: 3px 3px 10px #6c757d;
+}
+
+.filterSP {
+  overflow: hidden;
+  width: 100%;
+  padding: 14px;
+}
+
+.loc-san-pham {
+  background-color: #f5f5f5;
+  border: 1px solid #aaa;
+  margin: 0;
+  padding: 0;
+  border-radius: 15px;
+  box-shadow: 3px 3px 10px #6c757d;
+}
+
+.btn {
+  background-color: #f9415b;
+}
+
+.form-check-input {
+  margin-top: 17px;
+}
+
+.form-check-label {
+  margin-top: 10px;
+}
+
+/* Định vị biểu tượng giỏ hàng ở phía bên */
+.cart-icon-container {
+  position: fixed;
+  top: 150px;
+  right: 10px;
+  background-color: #63e6be;
+  padding: 10px;
+  border-radius: 50%;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.cart-icon-container a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.cart-count {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: red;
+  color: white;
+  font-size: 12px;
+  padding: 2px 8px;
+  border-radius: 50%;
+}
 
 .product-card {
-    border: 1px solid #aaa;
-    background-color: white;
-    padding: 15px;
-    border-radius: 5px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    position: relative; /* Thêm thuộc tính position: relative để có thể căn chỉnh vị trí tuyệt đối */
-    overflow: hidden;
-    /* transition: all 0.1s ease; */
+  margin-bottom: 20px;
+  width: 85%;
+  background-color: #ffffff;
+  border-radius: 20px;
+}
+
+.product-card {
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  will-change: transform;
+}
+
+.product-card:hover {
+  transform: scale(1.03);
+  /* Tăng kích thước nhẹ của phần bài viết khi di chuột */
+  background-color: #f0f0f0;
+  /* Thay đổi màu nền khi di chuột */
 }
 
 .product-card img {
-    width: 100%;
-    /* border-radius: 8px; */
-    height: 150px; /* Chiều cao của ảnh sản phẩm */
-    object-fit: contain; /* Đảm bảo ảnh không bị bể */
+  display: block;
+  margin: 0 auto;
+  margin-top: -20px;
+  width: 50%;
+  height: 175px;
 }
 
-.product-title {
-    font-weight: bold;
-    margin-top: 10px;
+.product-sale {
+  background-color: #d70018;
+  width: 30%;
+  color: white;
+  border-radius: 0 30px 30px 0;
+  /* Bo tròn bên phải */
+  padding: 12px 1px;
+  /* Điều chỉnh kích thước tag */
 }
+
 .product-price {
-    font-size: 16px;
-    color: #FF5733;
+  margin-top: 15px;
+  margin-left: 12px;
+  margin-bottom: 5px;
 }
 
-.product-content {
-    flex-grow: 1; /* Phần nội dung chính mở rộng để lấp đầy không gian trống */
-    /* border: 1px dotted red; */
-    /* margin-bottom: 10px; Khoảng cách phía dưới của product-content */
-    justify-content: space-between;
+.product-price .discount {
+  color: #e74c3c;
+  /* Màu đỏ nổi bật cho giá giảm */
+  font-weight: bold;
+  /* In đậm để dễ nhận diện */
 }
 
-
-.product-price-container {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    /* border: 1px solid black; */
-    /* padding: 10px; Khoảng cách giữa nội dung và viền của product-price-container */
-    /* padding: 10px 0px  10px 0px; */
+.product-name {
+  font-weight: bold;
+  font-size: 18px;
+  margin-left: 12px;
 }
 
-.product-discount {
-    font-size: 14px;
-    color: #aaa;
-    text-decoration: line-through;
-    /* margin-left: 10px; Khoảng cách giữa giá gốc và giá khuyến mãi */
+.product-name a {
+  text-decoration: none;
+  color: black;
 }
 
-.product-actions {
-    /* margin-top: 10px; */
-    display: flex;
-    justify-content: center; /* Canh chỉnh các phần tử con vào 2 bên */
-    align-items: center; /* Căn chỉnh các phần tử con theo chiều dọc */
+.notification-box {
+  background-color: #f0f0f0;
+  /* Màu nền nhạt */
+  border-radius: 5px;
+  color: #333;
+  /* Màu chữ tối để dễ đọc */
+  font-size: 0.8em;
+  margin-top: 3%;
+  margin-left: 10px;
+  max-width: 90%;
 }
 
-.btn-discount {
-    background-color: pink;
-    padding: 5px 10px;
-    border-bottom-left-radius: 15px;
-    font-size: 12px;
-    color: #FF5733;
-    font-weight: bold;
-    /* border: 1px solid red; */
-    position: absolute;
-    top: 0px; /* Để nút cách top của .product-card 10px */
-    right: 0px; /* Để nút cách right của .product-card 10px */
+.iconProduct {
+  margin-top: 3%;
+  margin-left: 10px;
 }
 
-.product-card:hover{
-    border-color: #FF5733;
-}
-.product-card img:hover{
-    transform: scale(1.1);
-}
-.carouselItem{
-    transition: 1.2s ease;
-    scroll-behavior: smooth;
+.iconProduct span {
+  margin-left: 25%;
 }
 
-
-/* CSS for image zoom effect */
-.zoomImg {
-    transition: all 0.3s ease-in-out;
-    overflow: hidden;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-}
-.zoomImg img{
-    max-height: 300px;
-    object-fit: contain;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    /* border: 1px solid red; */
-   
+.page-item .page-link {
+  background-color: white;
+  color: black;
 }
 
-.zoomImg img:hover {
-    transform: scale(1.2); /* Increase scale to 1.2 when hovering */
+.page-item.active .page-link {
+  background-color: red;
+  /* Optional: different color for active page */
 }
 
-#productModalLabel{
-    font-size: 32px;
-    padding: 0px;
-    color: #e8bd72;
+#footer-main {
+  height: 250px;
 }
 
-.btn-buy-now{
-    /* background-color: #FF5733; */
-    width: auto;
+.introduce {
+  margin-left: 35px;
 }
-.btn-add-to-cart{
-    /* background-color: #e8bd72; */
-    width: auto;
+
+.introduce ul {
+  list-style: none;
+  padding: 0;
+}
+
+.introduce li {
+  margin-top: 25px;
+}
+
+.introduce a {
+  text-decoration: none;
+  color: black;
+}
+
+.introduce a:hover {
+  color: red;
+}
+
+.contactFooter {
+  margin-left: 13%;
+}
+
+.contactFooter ul {
+  list-style: none;
+  padding: 0;
+}
+
+.contactFooter i {
+  margin-top: 25px;
+  margin-right: 5px;
+}
+
+.contactFooter a {
+  text-decoration: none;
+  color: black;
+}
+
+.contactFooter a:hover {
+  color: red;
+}
+
+.interactFooter {
+  margin-left: 8%;
+}
+
+.bottom-social-media {
+  font-size: 35px;
+}
+
+.bottom-social-media li {
+  margin-top: 5px;
+}
+
+.pay ul {
+  list-style: none;
+  padding: 0;
+}
+
+.pay li {
+  display: inline-block;
+  margin-top: 10px;
+}
+
+.pay-icons img {
+  width: 51px;
+  height: 60px;
+}
+
+.ship h4 {
+  margin-top: 15px;
+}
+
+.ship ul {
+  list-style: none;
+  padding: 0;
+}
+
+.ship li {
+  display: inline-block;
+  margin-top: 10px;
+}
+
+.ship-icons img {
+  width: 51px;
+  height: 60px;
+}
+
+hr {
+  border: 1px solid #ccc;
+  margin: 20px;
+}
+
+.footer-bottom p {
+  font-weight: bold;
 }
